Fix shifted category list
ERM39055

[4.5.x]

--- a/resources/bluespice.insertcategory.discovery.css
+++ b/resources/bluespice.insertcategory.discovery.css
@@ -57,7 +57,6 @@
 	list-style: none;
 	padding: 0;
 	margin-top: 0;
-	margin-bottom: 1rem;
 }
 
 .bs-insert-category-tool > ul > li {
